2016-07-21  Jason Merrill  <jason@redhat.com>

	PR c++/71913
	* call.c (unsafe_copy_elision_p): It's OK to elide when
	initializing an unknown object.

2016-07-20  Jakub Jelinek  <jakub@redhat.com>

	PR c++/71909
	* parser.c (cp_parser_save_member_function_body): Consume
	__transaction_relaxed or __transaction_atomic with optional
	attribute.  Only skip catch with block if try keyword is seen.

2016-07-19  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2016-07-18  Jakub Jelinek  <jakub@redhat.com>

	PR c++/71871
	* typeck.c (build_x_conditional_expr): Revert the 2012-10-25 change.

2016-07-07  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2016-06-14  Jakub Jelinek  <jakub@redhat.com>

	PR c++/71528
	* decl.c (duplicate_decls): For DECL_INITIALIZED_P non-external
	olddecl vars, preserve their TREE_READONLY bit.

	PR c++/71516
	* decl.c (complete_vars): Handle gracefully type == error_mark_node.

2016-06-08  Jakub Jelinek  <jakub@redhat.com>

	PR c++/71442
	* pt.c (tsubst_copy): Only set TREE_USED on DECLs.

2016-06-03  Release Manager

	* GCC 5.4.0 released.

2016-05-23  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2016-03-23  Patrick Palka  <ppalka@gcc.gnu.org>
 
	PR c++/70347
	* typeck.c (process_init_constructor_union): If the initializer
	is empty, use the union's NSDMI if it has one.

2016-05-20  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/70466
	* call.c (convert_like_real): Check that we are actually converting
	from an init list.

2016-05-18  Jason Merrill  <jason@redhat.com>

	PR c++/70505
	* pt.c (tsubst_baselink): Give the new TEMPLATE_ID_EXPR
	unknown_type_node, too.

	PR c++/70494
	* decl.c (cxx_maybe_build_cleanup): Handle non-decls.
	* typeck2.c (split_nonconstant_init_1): Use it.

	PR c++/70648
	* constexpr.c (cxx_eval_store_expression): Also copy
	CONSTRUCTOR_NO_IMPLICIT_ZERO.

	PR c++/70353
	* decl.c (make_rtl_for_nonlocal_decl): Don't defer local statics
	in constexpr functions.

	PR c++/70095